--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -2,6 +2,9 @@
 set -g base-index 1
 set -g pane-base-index 1
 
+# Enable mouse scroll
+setw -g mode-mouse on
+
 # Allow copy and paste with tmux, and also selenium to run properly
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
