--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,3 +1,26 @@
+# Change default prefix to Ctrl-b instead
+set -g prefix C-a
+bind C-a send-prefix
+unbind C-b
+
+# Change pane with Vim navigation keys
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Resize pane by 10 px in each direction
+bind -r left   resize-pane -L 10
+bind -r down  resize-pane -D 10
+bind -r up  resize-pane -U 10
+bind -r right   resize-pane -R 10
+
+# Increase delay for pane index display
+setw -g display-panes-time 3000
+
+# Use Vim keys
+setw -g mode-keys vi
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 set -g pane-base-index 1
@@ -5,6 +28,25 @@ set -g pane-base-index 1
 # Enable mouse scroll
 setw -g mode-mouse on
 
+# Enable mouse interactions for panes and windows
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window on
+
 # Allow copy and paste with tmux, and also selenium to run properly
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
+# Support for christoomey/vim-tmux-navigator
+# # smart pane switching with awareness of vim splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
