Fix tmux window issues

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -3,17 +3,30 @@ set -g prefix C-a
 bind C-a send-prefix
 unbind C-b
 
+# Split panes naturally
+bind | split-window -h
+bind - split-window -v
+
 # Change pane with Vim navigation keys
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Resize pane by 10 px in each direction
-bind -r left   resize-pane -L 10
-bind -r down  resize-pane -D 10
-bind -r up  resize-pane -U 10
-bind -r right   resize-pane -R 10
+# Change window
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize pane by 5 px in each direction
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
+
+set -g default-terminal "screen-256color"
+
+# Set delay between prefix and command
+set -s escape-time 1
 
 # Increase delay for pane index display
 setw -g display-panes-time 3000
