--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -10,10 +10,10 @@
   local = yellow
   remote = green
 [color "diff"]
-  meta = yellow bold
-  frag = magenta bold
-  old = red bold
-  new = green bold
+  meta = yellow
+  frag = magenta
+  old = red
+  new = green
 [color "status"]
   added = yellow
   changed = green
@@ -21,7 +21,7 @@
 [alias]
   hgp = show --format=\"From: %an <%ae>%n%s%n%b\" -U8
   co = checkout
-  st = status -sb
+  st = status
   lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 [mergetool]
   keepbackup = false
